[package]
name = "fjall"
description = "Log-structured, embeddable key-value storage engine"
license = "MIT OR Apache-2.0"
version = "4.0.0"
edition = "2021"
rust-version = "1.90.0"
readme = "README.md"
include = ["src/**/*", "LICENSE-APACHE", "LICENSE-MIT", "README.md"]
repository = "https://github.com/structured-world/fjall"
# homepage points to upstream — docs.rs and project docs live there
homepage = "https://github.com/fjall-rs/fjall"
keywords = ["database", "key-value", "lsm", "rocksdb", "leveldb"]
categories = ["data-structures", "database-implementations", "algorithms"]

[lib]
name = "fjall"
path = "src/lib.rs"

[features]
default = ["lz4"]
lz4 = ["lsm-tree/lz4", "dep:lz4_flex"]
bytes_1 = ["lsm-tree/bytes_1"]
metrics = ["lsm-tree/metrics"]
__internal_whitebox = []

[dependencies]
byteorder = { package = "byteorder-lite", version = "0.1.0" }
byteview = "~0.10.1"
# Fork with V4 disk format + SequenceNumberGenerator trait (structured-world/lsm-tree#10).
# TODO(#24): pin to tag = "v4.0.0" once lsm-tree release management is done.
# Pinned to rev for reproducible builds until tag exists.
lsm-tree = { git = "https://github.com/structured-world/lsm-tree.git", rev = "c03a443515ce90b70d40200d679c77a170209d83", default-features = false, features = [] }
log = "0.4.27"
tempfile = "3.20.0"
dashmap = "6.1.0"
xxhash-rust = { version = "0.8.15", features = ["xxh3"] }
lz4_flex = { version = "0.13.0", optional = true }
flume = { version = "0.12.0", default-features = false }

[dev-dependencies]
nanoid = "0.4.0"
test-log = "0.2.18"
rand = "0.9.2"

[package.metadata.cargo-all-features]
denylist = ["__internal_whitebox"]
