[package]
name = "coordinode-fjall"
description = "Log-structured, embeddable key-value storage engine — CoordiNode fork"
license = "Apache-2.0"
version = "4.1.0"
edition = "2021"
rust-version = "1.90.0"
readme = "README.md"
include = ["src/**/*", "LICENSE-APACHE", "README.md"]
repository = "https://github.com/structured-world/coordinode-fjall"
homepage = "https://github.com/structured-world/coordinode-fjall"
keywords = ["database", "key-value", "storage", "coordinode", "embedded-database"]
categories = ["database-implementations"]

[lib]
name = "fjall"
path = "src/lib.rs"

[features]
default = ["lz4"]
lz4 = ["lsm-tree/lz4", "dep:lz4_flex"]
zstd = ["lsm-tree/zstd", "dep:zstd"]
encryption = ["lsm-tree/encryption"]
bytes_1 = ["lsm-tree/bytes_1"]
metrics = ["lsm-tree/metrics"]
__internal_whitebox = []

[dependencies]
byteorder = { package = "byteorder-lite", version = "0.1.0" }
byteview = "~0.10.1"
# Published fork: coordinode-lsm-tree (crates.io)
# Aliased as lsm-tree so all `use lsm_tree::` code works unchanged.
lsm-tree = { package = "coordinode-lsm-tree", version = "4", default-features = false, features = [] }
log = "0.4.27"
tempfile = "3.20.0"
dashmap = "6.1.0"
xxhash-rust = { version = "0.8.15", features = ["xxh3"] }
lz4_flex = { version = "0.13.0", optional = true }
zstd = { version = "0.13", optional = true, default-features = false }
flume = { version = "0.12.0", default-features = false }

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }
nanoid = "0.4.0"
test-log = "0.2.18"
rand = "0.9.2"

[[bench]]
name = "fjall_bench"
harness = false

[package.metadata.cargo-all-features]
denylist = ["__internal_whitebox"]
